<resources>
    <string name="app_name">Futbollers</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="submit_login">Login</string>
    <string name="text_signUp"> <u>Sign Up</u> </string>

    <!-- Pantalla de sign up -->

    <string name="text_titulo_signUp">Registrarse</string>
    <string name="input_nombre">Nombre</string>
    <string name="input_posicion">Posición</string>
    <string name="submit_signUp">Registrarse</string>

    <string name="text_sexo">Sexo</string>

    <string name="bottom_navigation_menu_equipo_text">Equipos</string>
    <string name="bottom_navigation_menu_partido_text">Partidos</string>
    <string name="bottom_navigation_menu_chat_text">Chat</string>

    <!-- Elegir Cancha -->
    <string name="text_display_fecha">%1$s/%2$s/%3$s - %4$s:%5$s</string>
    <string name="input_codigo_promocion">Código promocional</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="open_drawer">Abrir drawer</string>
    <string name="close_drawer">Cerrar drawer</string>
</resources>
