<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="usuarioNuevo" type="ar.edu.unsam.proyecto.futbollers.domain.Usuario" />
        <variable name="posicionModel" type="java.lang.String" />
        <import type="ar.edu.unsam.proyecto.futbollers.activities.inicio.SignUpActivity" />
        <import type="android.text.InputType"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text_titulo_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/text_titulo_signUp"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/input_nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.034" />

        <include
            android:id="@+id/input_nombre"
            layout="@layout/text_input_layout"
            android:layout_width="359dp"
            android:layout_height="55dp"

            android:hint="@{@string/input_nombre}"
            android:inputType="@{(InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PERSON_NAME)}"
            android:text="@={usuarioNuevo.nombre}"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />

        <include
            android:id="@+id/input_email"
            layout="@layout/text_input_layout"
            android:layout_width="359dp"
            android:layout_height="55dp"

            android:hint="@{@string/input_email}"
            android:inputType="@{(InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_EMAIL_ADDRESS)}"
            android:text="@={usuarioNuevo.email}"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_nombre"
            app:layout_constraintVertical_bias="0.03" />


        <!-- TODO: Revisar xq los layout tienen q superponerse para que se vea bien -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="356dp"
            android:layout_height="55dp"


            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/input_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={usuarioNuevo.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/text_sexo"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email"
            app:layout_constraintVertical_bias="0.637" />

        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/first"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

        </RadioGroup>


        <RadioButton

            android:id="@+id/radio_btn_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:checked='@{usuarioNuevo.sexo.equals("M")}'
            android:onClick='@{() -> usuarioNuevo.setSexo("M")}'
            android:text="M"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.162"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email"
            app:layout_constraintVertical_bias="0.713" />

        <RadioButton
            android:id="@+id/radio_btn_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:checked='@{usuarioNuevo.sexo.equals("F")}'
            android:onClick='@{() -> usuarioNuevo.setSexo("F")}'
            android:text="F"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email"
            app:layout_constraintVertical_bias="0.713" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="292dp"
            android:layout_height="55dp"
            android:layout_marginTop="436dp"
            android:hint="@string/input_posicion"
            app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.508">

            <AutoCompleteTextView
                android:id="@+id/combo_posiciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@={usuarioNuevo.posicion}" />
            <!-- Yo se que editable esta deprecado, pero google
                material es la basofia mas grande que hay y hay q usarlo igual -->


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_signUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.901" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>